fix profile description alignment

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -94,6 +94,7 @@
   height: 50px;
   width: 150px;
   margin: 0 0 0 auto;
+  padding: 0;
 }
 
 .profile__add-button:hover {
@@ -133,6 +134,7 @@
     padding: 38.25px 0px 0px;
     margin: 0;
     border: none;
+    line-height: normal;
   }
 
   .profile__avatar {
@@ -150,6 +152,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 14px 10px;
   }
 
   .profile__title {
@@ -161,12 +164,14 @@
   .profile__description {
     font-size: 14px;
     align-self: center;
-    width: 100%;
+    display: flex;
     justify-content: center;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
     max-width: 280px;
+    width: 100%;
+    line-height: 16.94px;
   }
 
   .profile__edit-button {
